reset CENTRAL_PACKAGE home page to primo default

--- a/CENTRAL_PACKAGE/html/home_en_US.html
+++ b/CENTRAL_PACKAGE/html/home_en_US.html
@@ -18,7 +18,7 @@
                     <li>Renew books and videos</li>
                     <li>Create favoriets lists</li>
                     <li>Export citations to Refworks and Endnote Web</li>
-                    <li>View full search results. (Some databases only show results when you're signed in.)</li>
+                    <li>View full search results. (Some databases, only show results when you're signed in.)</li>
                 </ul>
             </md-card-content>
         </md-card>
@@ -39,6 +39,18 @@
         </md-card>
     </div>
     <div flex-xs flex="40" layout="column">
-        <live-help-card></live-help-card>
+        <md-card class="default-card">
+            <md-card-title>
+                <md-card-title-text>
+                    <span class="md-headline">Where can I get help?</span>
+                </md-card-title-text>
+            </md-card-title>
+            <md-card-content>
+                <p>
+                    <a href="#">Ask a librarian</a> how to start your search
+                </p>
+
+            </md-card-content>
+        </md-card>
     </div>
 </md-content>
