--- a/CENTRAL_PACKAGE/html/live-help-card.html
+++ b/CENTRAL_PACKAGE/html/live-help-card.html
@@ -9,7 +9,7 @@
             <a href="#" ng-click="showChat($event);">Ask a librarian</a> how to start your search.
         </p>
         <p class="libraryh3lp" style="display:none">
-            <a href="#" ng-click="alert('Currently offline');">Ask a librarian<a>
+            <a href="#" ng-click="alert('Currently offline');">Ask a librarian</a>
             <md-icon md-svg-icon="content:ic_block_24px"></md-icon>          
             <strong>LiveHelp is currently offline.</strong>
         </p>
