--- a/CENTRAL_PACKAGE/html/live-help-card.html
+++ b/CENTRAL_PACKAGE/html/live-help-card.html
@@ -1,17 +1,17 @@
 <md-card class="default-card">
-    <md-card-title>
-        <md-card-title-text>
-            <span class="md-headline">Where can I get help?</span>
-        </md-card-title-text>
-    </md-card-title>
-    <md-card-content>
-        <p jid="novanet@chat.libraryh3lp.com" class="libraryh3lp" style="display:none">
-            <a href="#" ng-click="showChat($event);">Ask a librarian</a> how to start your search.
-        </p>
-        <p class="libraryh3lp" style="display:none">
-            <a href="#" ng-click="alert('Currently offline');">Ask a librarian</a>
-            <md-icon md-svg-icon="content:ic_block_24px"></md-icon>          
-            <strong>LiveHelp is currently offline.</strong>
-        </p>
-    </md-card-content>
+  <md-card-title>
+    <md-card-title-text>
+      <span class="md-headline">Where can I get help?</span>
+    </md-card-title-text>
+  </md-card-title>
+  <md-card-content>
+    <p jid="novanet@chat.libraryh3lp.com" class="libraryh3lp" style="display:none">
+      <a href="#" ng-click="showChat($event);">Ask a librarian</a>
+      how to start your search.
+    </p>
+    <p class="libraryh3lp" style="display:none">
+      <a href="#" ng-click="alert('Currently offline');">Ask a librarian</a>
+      <md-icon md-svg-icon="content:ic_block_24px"></md-icon> LiveHelp is currently offline.
+    </p>
+  </md-card-content>
 </md-card>
