default homepage uses <live-help-card> now
Still, we should override the home page in every view (not done yet)

--- a/CENTRAL_PACKAGE/html/home_en_US.html
+++ b/CENTRAL_PACKAGE/html/home_en_US.html
@@ -39,6 +39,8 @@
         </md-card>
     </div>
     <div flex-xs flex="40" layout="column">
+      <live-help-card></live-help-card>
+    <!--
         <md-card class="default-card">
             <md-card-title>
                 <md-card-title-text>
@@ -52,5 +54,6 @@
 
             </md-card-content>
         </md-card>
+    -->
     </div>
 </md-content>
