--- a/CENTRAL_PACKAGE/html/live-help-card.html
+++ b/CENTRAL_PACKAGE/html/live-help-card.html
@@ -6,10 +6,10 @@
   </md-card-title>
   <md-card-content>
     <p jid="novanet@chat.libraryh3lp.com" class="libraryh3lp" style="display:none">
-      <a href="#" ng-click="showChat($event);">Ask a librarian</a> how to start your search.
+      <a href ng-click="showChat($event);">Ask a librarian</a> how to start your search.
     </p>
     <p class="libraryh3lp" style="display:none">
-      <a href="#" ng-click="sayOffline($event);">Ask a librarian</a> how to start your search.
+      <a href ng-click="sayOffline($event);">Ask a librarian</a> how to start your search.
       <div>
         <md-icon md-svg-icon="content:ic_block_24px"></md-icon> LiveHelp is currently offline.
       </div>
