--- a/CENTRAL_PACKAGE/html/home_en_US.html
+++ b/CENTRAL_PACKAGE/html/home_en_US.html
@@ -29,7 +29,7 @@
                 </md-card-title-text>
             </md-card-title>
             <md-card-content>
-                <a href="#" class="arrow-link">
+                <a href="" class="arrow-link">
                     Let us know what you think!
                     <prm-icon link-arrow>
                         <md-icon md-svg-icon="./images/chevron-right.svg"></md-icon>
