switch to md-card

--- a/ACAD/html/search-elsewhere.html
+++ b/ACAD/html/search-elsewhere.html
@@ -1,4 +1,22 @@
-<div style="background-color:black;color:white;">
-  <p><a id="searchWorldCat" target="_blank" href="https://www.worldcat.org?q=">try your search in WorldCat</a></p>
-  <p><a id="searchGoogleScholar" target="_blank" href="https://scholar.google.ca/scholar?q=">try your search in Google Scholar</a></p>
-</div>
+<md-card class="default-card">
+    <md-card-title>
+        <md-card-title-text>
+            <span class="md-headline">Not finding what you are looking for?<span>
+        </md-card-title-text>
+    </md-card-title>
+    <md-card-content>
+      <div class="spacer-replacer">
+        <p>
+          <span>For Books,</span>
+          <a id="searchWorldCat" target="_blank" href="https://www.worldcat.org?q=">try your search in WorldCat</a>
+        </p>
+        <p>
+          <span>For Articles,<span>
+          <a id="searchGoogleScholar" target="_blank" href="https://scholar.google.ca/scholar?q=">try your search in Google Scholar</a>
+        </p>
+        <p>
+          Maybe add some general search tips here, like on the zero-results page.
+        </p>
+      </div>
+    </md-card-content>
+</md-card>
