only show if search is complete
also, the "zero results page" has a <prm-search-result-after> directive,
so this hides this component on that page as well.

--- a/CENTRAL_PACKAGE/html/search-elsewhere.html
+++ b/CENTRAL_PACKAGE/html/search-elsewhere.html
@@ -1,4 +1,4 @@
-<md-card class="default-card">
+<md-card class="default-card" ng-show="isSearchDone();">
   <md-card-title>
     <md-card-title-text>
       <span class="md-headline">Not finding what you are looking for?<span>
