include spacer at the end of the page
We removed (shrunk, actually) a spacer div to push this box up to the
very bottom of the results list.  We need a spacer below it to replace
that one (especially on mobile, where the "Tweak my Results" button
hides the bottom of the results list if there is no spacer div)

--- a/CENTRAL_PACKAGE/html/search-elsewhere.html
+++ b/CENTRAL_PACKAGE/html/search-elsewhere.html
@@ -5,7 +5,6 @@
     </md-card-title-text>
   </md-card-title>
   <md-card-content>
-    <div class="spacer-replacer">
       <p>
         <span>For books,</span>
         <a id="searchWorldCat" target="_blank" href="https://www.worldcat.org?q=">try your search in WorldCat</a>
@@ -19,6 +18,7 @@
           Maybe add some general search tips here, like on the zero-results page.
         </p>
       -->
-    </div>
   </md-card-content>
 </md-card>
+<!-- we set the height of a "spacer" div to something small; this replaces that right after this <md-card> -->
+<div class="spacer-replacer">&nbsp;</div>
