--- a/CENTRAL_PACKAGE/html/live-help-card.html
+++ b/CENTRAL_PACKAGE/html/live-help-card.html
@@ -12,5 +12,31 @@
       <p><a href ng-click="sayOffline($event);">Ask a librarian</a> how to start your search.</p>
       <p><md-icon md-svg-icon="content:ic_block_24px"></md-icon> LiveHelp is currently offline.</p>
     </div>
+    
+    <div style="margin-top:3em">
+      <header><strong>Hours of Operation</strong></header>
+      <div layout="row">
+        <div flex>Mon - Thu</div><div flex="50">10am - 10pm</div>
+      </div>
+      <div layout="row">
+        <div flex>Friday</div><div flex="50">10am - 6pm</div>
+      </div>
+      <div layout="row">
+        <div flex>Saturday</div><div flex="50">No Service</div>
+      </div>
+      <div layout="row">
+        <div flex>Sunday</div><div flex="50">4pm - 10pm</div>
+      </div>
+    </div>
+    <div style="margin-top:1em">
+      <header><strong>No Service</strong></header>
+      <div layout="row" title="Thanksgiving">Oct 9, 2017</div>
+      <div layout="row" title="Rememberance Day">Nov 13, 2017</div>
+      <div layout="row" title="Winter Break">Dec 9, 2017 - Jan 7, 2018</div>
+      <div layout="row" title="Heritage Day">Feb 19, 2018</div>
+      <div layout="row" title="Easter Break">Mar 30, 2018 - Apr 2, 2018</div>
+      <div layout="row" title="Victoria Day">May 21, 2018</div>
+    </div>
+    
   </md-card-content>
 </md-card>
