minor: change "Primo" to "Novanet" in landing page blurb

--- a/DAL/html/home_en_US.html
+++ b/DAL/html/home_en_US.html
@@ -9,10 +9,10 @@
             </md-card-title>
             <md-card-content>
                 <p>
-                    Primo provides simple, one-stop searching for books and e-books, videos, articles, digital media, and more.
+                    Novanet provides simple, one-stop searching for books and e-books, videos, articles, digital media, and more.
                 </p>
                 <p>
-                    Primo also helps you manage your research. Sign-in in order to:
+                    Novanet also helps you manage your research. Sign-in in order to:
                 </p>
                 <ul>
                     <li>Renew books and videos</li>
