add fff notice to main

--- a/CENTRAL_PACKAGE/html/home_en_US.html
+++ b/CENTRAL_PACKAGE/html/home_en_US.html
@@ -38,7 +38,6 @@
         </md-card>
     </div>
     <div flex-xs flex="40" layout="column">
-<!--
       <md-card class="default-card">
           <md-card-title>
               <md-card-title-text>
@@ -47,11 +46,10 @@
           </md-card-title>
           <md-card-content>
             <p>
-              Novanet is pleased to announce our Food for Fines program will be running from October 16th to November 5th. Bring in a non-perishable food item to any participating academic library in Nova Scotia and we will waive fines for every item donated (some exceptions apply, ask staff for details). For more information about our Food for Fines program, contact your home library.
+              Novanet is pleased to announce our Food for Fines program will be running from February 5th&ndash;25th. Bring in a non-perishable food item to any participating academic library in Nova Scotia and we will waive fines for every item donated (some exceptions apply, ask staff for details). For more information about our Food for Fines program, contact your home library.
             </p>
           </md-card-content>
       </md-card>
--->
       <live-help-card></live-help-card>
     <!--
         <md-card class="default-card">
