don't repeat content of seasonal-notice-card
Use "seasonal-notice-card" component everywhere instead of writing out
the content in multiple places

--- a/CENTRAL_PACKAGE/html/home_fr_FR.html
+++ b/CENTRAL_PACKAGE/html/home_fr_FR.html
@@ -1,21 +1,8 @@
-<!--
 <md-content layout-xs="column" layout="row">
   <div flex="60" layout="column">
-    <md-card class="default-card">
-      <md-card-title>
-        <md-card-title-text>
-          <span class="md-headline">Payez vos amendes avec de la nourriture du 16 octobre au 5 novembre.</span>
-        </md-card-title-text>
-      </md-card-title>
-      <md-card-content>
-        <p>
-          Pour chaque don de nourriture non périssable que vous ferez, les bibliothèques participantes de Novanet réduiront votre amende de 3$ (certaines exceptions s'appliquent). Chaque don de nourriture sera envoyé à une banque alimentaire pour aider ceux qui sont dans le besoin. Pour d'autres renseignements, contactez votre bibliothèque.
-        </p>
-      </md-card-content>
-    </md-card>
+    <seasonal-notice-card></seasonal-notice-card>
   </div>
   <div flex-xs flex="40" layout="column">
     <live-help-card></live-help-card>
   </div>
 </md-content>
--->
