--- a/CENTRAL_PACKAGE/html/home_en_US.html
+++ b/CENTRAL_PACKAGE/html/home_en_US.html
@@ -38,33 +38,7 @@
         </md-card>
     </div>
     <div flex-xs flex="40" layout="column">
-      <md-card class="default-card">
-          <md-card-title>
-              <md-card-title-text>
-                  <span class="md-headline">Got fines now but no cash?</span>
-              </md-card-title-text>
-          </md-card-title>
-          <md-card-content>
-            <p>
-              Novanet is pleased to announce our Food for Fines program will be running from February 5th&ndash;25th. Bring in a non-perishable food item to any participating academic library in Nova Scotia and we will waive fines for every item donated (some exceptions apply, ask staff for details). For more information about our Food for Fines program, contact your home library.
-            </p>
-          </md-card-content>
-      </md-card>
+      <seasonal-notice-card></seasonal-notice-card>
       <live-help-card></live-help-card>
-    <!--
-        <md-card class="default-card">
-            <md-card-title>
-                <md-card-title-text>
-                    <span class="md-headline">Where can I get help?</span>
-                </md-card-title-text>
-            </md-card-title>
-            <md-card-content>
-                <p>
-                    <a href="#">Ask a librarian</a> how to start your search
-                </p>
-
-            </md-card-content>
-        </md-card>
-    -->
     </div>
 </md-content>
