change hyphen to ndash

--- a/CENTRAL_PACKAGE/html/live-help-card.html
+++ b/CENTRAL_PACKAGE/html/live-help-card.html
@@ -16,7 +16,7 @@
     <div style="margin-top:3em">
       <header><strong>Hours of Operation</strong></header>
       <div layout="row">
-        <div flex>Mon - Fri</div><div flex="50">10am - 4pm</div>
+        <div flex>Mon&ndash;Fri</div><div flex="50">10am&ndash;4pm</div>
       </div>
     </div>
     <div style="margin-top:1em">
