comment/hide summer hours

--- a/CENTRAL_PACKAGE/html/live-help-card.html
+++ b/CENTRAL_PACKAGE/html/live-help-card.html
@@ -17,12 +17,15 @@
       <p><md-icon class="md-warn" md-svg-icon="content:ic_block_24px"></md-icon> LiveHelp is currently offline.</p>
     </div>
 
+    <!--
+      Summer
     <div style="margin-top:3em">
       <header><strong>Hours of Operation</strong></header>
       <div layout="row">
         LiveHelp will resume in September.
       </div>
     </div>
+    -->
     <!--
     <div style="margin-top:3em">
       <header><strong>Hours of Operation</strong></header>
