uncomment/show fall hours

--- a/CENTRAL_PACKAGE/html/live-help-card.html
+++ b/CENTRAL_PACKAGE/html/live-help-card.html
@@ -27,6 +27,8 @@
     </div>
     -->
     <!--
+      Fall
+    -->
     <div style="margin-top:3em">
       <header><strong>Hours of Operation</strong></header>
       <div layout="row">
@@ -37,8 +39,7 @@
       <header><strong>No Service</strong></header>
       <div layout="row" title="Victoria Day">May 21, 2018</div>
     </div>
-    -->
-    
+
     
   </md-card-content>
 </md-card>
