update fall hours for new term

--- a/CENTRAL_PACKAGE/html/live-help-card.html
+++ b/CENTRAL_PACKAGE/html/live-help-card.html
@@ -32,12 +32,26 @@
     <div style="margin-top:3em">
       <header><strong>Hours of Operation</strong></header>
       <div layout="row">
-        <div flex>Mon&ndash;Fri</div><div flex="50">10am&ndash;4pm</div>
+        <div flex>Mon&ndash;Thu</div><div flex="50">10am&ndash;10pm</div>
+      </div>
+      <div layout="row">
+        <div flex>Friday</div><div flex="50">10am&ndash;6pm</div>
+      </div>
+      <div layout="row">
+        <div flex>Saturday</div><div flex="50">No Service</div>
+      </div>
+      <div layout="row">
+        <div flex>Sunday</div><div flex="50">4pm&ndash;10pm</div>
       </div>
     </div>
     <div style="margin-top:1em">
       <header><strong>No Service</strong></header>
-      <div layout="row" title="Victoria Day">May 21, 2018</div>
+      <div layout="row" title="Thanksgiving">Oct 8, 2018</div>
+      <div layout="row" title="Remembrance Day">Nov 12, 2018</div>
+      <div layout="row" title="Winter Break">Dec 8, 2018 &ndash; Jan 6, 2019</div>
+      <div layout="row" title="Heritage Day">Feb 18, 2019</div>
+      <div layout="row" title="Easter">Apr 19, 2019 &ndash; Apr 22, 2019</div>
+      <div layout="row" title="Victoria Day">May 20, 2019</div>
     </div>
 
     
