say what the hours are about

--- a/CENTRAL_PACKAGE/html/live-help-card.html
+++ b/CENTRAL_PACKAGE/html/live-help-card.html
@@ -30,7 +30,7 @@
       Fall
     -->
     <div style="margin-top:3em">
-      <header><strong>Hours of Operation</strong></header>
+      <header><strong>LiveHelp Hours of Operation</strong></header>
       <div layout="row">
         <div flex>Mon&ndash;Thu</div><div flex="50">10am&ndash;10pm</div>
       </div>
