--- a/CENTRAL_PACKAGE/html/seasonal-notice_fr_FR.html
+++ b/CENTRAL_PACKAGE/html/seasonal-notice_fr_FR.html
@@ -2,7 +2,7 @@
 <md-card class="default-card">
     <md-card-title>
         <md-card-title-text>
-            <span class="md-headline">Payez vos amendes avec de la nourriture du 5 au 25 février.</span>
+            <span class="md-headline">Payez vos amendes avec de la nourriture du 15 octobre au 4 novembre.</span>
         </md-card-title-text>
     </md-card-title>
     <md-card-content>
