holiday closure of nn express

--- a/CENTRAL_PACKAGE/html/seasonal-notice_fr_FR.html
+++ b/CENTRAL_PACKAGE/html/seasonal-notice_fr_FR.html
@@ -2,12 +2,12 @@
 <md-card class="default-card">
     <md-card-title>
         <md-card-title-text>
-            <span class="md-headline">Payez vos amendes avec de la nourriture du 15 octobre au 4 novembre.</span>
+            <span class="md-headline">&nbsp;</span>
         </md-card-title-text>
     </md-card-title>
     <md-card-content>
       <p>
-        Pour chaque don de nourriture non périssable que vous ferez, les bibliothèques participantes de Novanet réduiront votre amende de 3$ (certaines exceptions s'appliquent). Chaque don de nourriture sera envoyé à une banque alimentaire pour aider ceux qui sont dans le besoin. Pour d'autres renseignements, contactez votre bibliothèque.
+        Le service Novanet Express et les réservations ne seront pas disponibles en raison de la fermeture des bibliothèques pendant les fêtes de décembre. Nous prévoyons cette interruption pour le lundi 17 décembre jusqu'au mecredi 2 janvier. Veuillez contacter votre bibliothèque pour des renseignements sur les autres services de prêt entrebibliothèques pendant cette période.
       </p>
     </md-card-content>
 </md-card>
