--- a/CENTRAL_PACKAGE/html/seasonal-notice_en_US.html
+++ b/CENTRAL_PACKAGE/html/seasonal-notice_en_US.html
@@ -2,12 +2,12 @@
 <md-card class="default-card">
     <md-card-title>
         <md-card-title-text>
-            <span class="md-headline">Got fines now but no cash?</span>
+            <span class="md-headline">&nbsp;</span>
         </md-card-title-text>
     </md-card-title>
     <md-card-content>
       <p>
-        Novanet is pleased to announce our Food for Fines program will be running from October 15th to November 4th. Bring in a non-perishable food item to any participating academic library in Nova Scotia and we will waive $3 in fines for every item donated (some exceptions apply, ask staff for details). For more information about our Food for Fines program, contact your home library.
+        Novanet Express and holds will not be available due to library holiday closures from Monday December 17th to Wednesday January 2nd, inclusive. Please check with your library for other Document Delivery/Interlibrary Loan alternatives during this time.
       </p>
     </md-card-content>
 </md-card>
