--- a/CENTRAL_PACKAGE/html/seasonal-notice_en_US.html
+++ b/CENTRAL_PACKAGE/html/seasonal-notice_en_US.html
@@ -7,7 +7,7 @@
     </md-card-title>
     <md-card-content>
       <p>
-        Got fines now but no cash? Novanet is pleased to announce our Food for Fines program will be running from February 4th to February 24th. Bring in a non-perishable food item to any participating academic library in Nova Scotia and we will waive fines for every item donated (some exceptions apply, ask staff for details). For more information about our Food for Fines program, contact your home library.
+        Got fines now but no cash? Novanet is pleased to announce our Food for Fines program will be running from October 14th to November 3rd. Bring in a non-perishable food item to any participating academic library in Nova Scotia and we will waive fines for every item donated (some exceptions apply, ask staff for details). For more information about our Food for Fines program, contact your home library.
       </p>
     </md-card-content>
 </md-card>
