--- a/CENTRAL_PACKAGE/html/seasonal-notice_fr_FR.html
+++ b/CENTRAL_PACKAGE/html/seasonal-notice_fr_FR.html
@@ -1,15 +1,13 @@
 
 <md-card class="default-card">
     <md-card-title>
-    <!--
         <md-card-title-text>
             <span class="md-headline">&nbsp;</span>
         </md-card-title-text>
     </md-card-title>
-    -->
     <md-card-content>
       <p>
-        Payez vos amendes avec de la nourriture du 4 février au 24 février. Pour chaque don de nourriture non périssable que vous ferez, les bibliothèques participantes de Novanet réduiront votre amende de 3$ (certaines exceptions s'appliquent). Chaque don de nourriture sera envoyé à une banque alimentaire pour aider ceux qui sont dans le besoin. Pour d'autres renseignements, contactez votre bibliothèque.
+        Payez vos amendes avec de la nourriture du 14 octobre au 3 novembre. Pour chaque don de nourriture non périssable que vous ferez, les bibliothèques participantes de Novanet réduiront votre amende de 3$ (certaines exceptions s'appliquent). Chaque don de nourriture sera envoyé à une banque alimentaire pour aider ceux qui sont dans le besoin. Pour d'autres renseignements, contactez votre bibliothèque.
       </p>
     </md-card-content>
 </md-card>
