update libraryh3lp domain
Moving to Canada-hosted service by the same provider

--- a/CENTRAL_PACKAGE/html/live-help-card.html
+++ b/CENTRAL_PACKAGE/html/live-help-card.html
@@ -9,7 +9,7 @@
     <md-card-content>
 
       <!-- the JS from libraryh3lp.com will remove the display:none style if someone is online, accepting chat requests. -->
-      <div jid="novanet@chat.libraryh3lp.com" class="libraryh3lp" style="display:none">
+      <div jid="novanet@chat.ca.libraryh3lp.com" class="libraryh3lp" style="display:none">
         <p><a href ng-click="showChat($event);">Ask a librarian</a> how to start your search.</p>
       </div>
 
