--- a/CENTRAL_PACKAGE/html/seasonal-notice_en_US.html
+++ b/CENTRAL_PACKAGE/html/seasonal-notice_en_US.html
@@ -12,3 +12,10 @@
     </md-card-content>
 </md-card>
 -->
+<md-card class="default-card">
+  <md-card-content>
+    <p>
+      Novanet Express and holds will not be available due to holiday closures from December 16th to January 2nd. Please check with your library for other Document Delivery/Interlibrary Loan alternatives during this time.
+    </p>
+  </md-card-content>
+</md-card>
