change the notice

--- a/CENTRAL_PACKAGE/html/seasonal-notice_en_US.html
+++ b/CENTRAL_PACKAGE/html/seasonal-notice_en_US.html
@@ -15,7 +15,7 @@
 <md-card class="default-card">
   <md-card-content>
     <p>
-      Novanet Express and holds will not be available due to holiday closures from December 16th to January 2nd. Please check with your library for other Document Delivery/Interlibrary Loan alternatives during this time.
+      COVID-19 Update: Due to the closure of Novanet member libraries Novanet Express and holds will not be available until further notice.
     </p>
   </md-card-content>
 </md-card>
