--- a/CENTRAL_PACKAGE/html/seasonal-notice_fr_FR.html
+++ b/CENTRAL_PACKAGE/html/seasonal-notice_fr_FR.html
@@ -15,7 +15,7 @@
 <md-card class="default-card">
   <md-card-content>
     <p>
-      Le service Novanet Express et les réservations ne seront pas disponibles en raison de la fermeture des bibliothèques pendant les fêtes de décembre. Nous prévoyons cette interruption pour le lundi 16 décembre jusqu'au jeudi 2 janvier. Veuillez contacter votre bibliothèque pour des renseignements sur les autres services de prêt entrebibliothèques pendant cette période.
+      Mise à jour – COVID-19 : En raison de la fermeture de bibliothèques de Novanet, le Novanet Express et les réservations ne sont pas disponibles jusqu’à nouvel ordre.
     </p>
   </md-card-content>
 </md-card>
