covid summer hours

--- a/CENTRAL_PACKAGE/html/live-help-card.html
+++ b/CENTRAL_PACKAGE/html/live-help-card.html
@@ -30,7 +30,6 @@
       </div>     
       <!--
         Fall
-       -->        
       <div style="margin-top:3em">
         <header><strong>Live Help Hours of Operation</strong></header>
         <div layout="row">
@@ -55,6 +54,23 @@
         <div layout="row" title="Easter">Apr 10, 2020 &ndash; Apr 13, 2020</div>
         <div layout="row" title="Victoria Day">May 18, 2020</div>
       </div>
+      -->
+      <!--
+        Spring
+      -->
+      <div style="margin-top:3em">
+        <header><strong>Live Help Hours of Operation</strong></header>
+        <div layout="row">
+          <div flex>Mon&ndash;Fri</div><div flex="50">10am&ndash;4pm</div>
+        </div>
+      </div>
+      <div style="margin-top:1em">
+        <header><strong>No Service</strong></header>
+        <div layout="row" title="Victoria Day">May 18, 2020</div>
+        <div layout="row" title="Canada Day">July 1, 2020</div>
+        <div layout="row" title="Natal Day">August 3, 2020</div>
+      </div>
+      
       
     </md-card-content>
   </md-card>
