activate live-help features on MTA view

--- a/CENTRAL_PACKAGE/html/live-help-widget.html
+++ b/CENTRAL_PACKAGE/html/live-help-widget.html
@@ -1,4 +1,4 @@
-<div ng-if= " !isMTA ">
+<div>
 
   <!-- the JS from libraryh3lp.com will remove the display:none style if someone is online, accepting chat requests. -->
   <div ng-click="showChat($event);" id="novanet-live-help" jid="novanet@chat.ca.libraryh3lp.com" class="libraryh3lp" style="display:none" aria-label="Live Help. Ask a Librarian!">
