tidy this file a bit
save the spring hours here for later.

--- a/CENTRAL_PACKAGE/html/live-help-card.html
+++ b/CENTRAL_PACKAGE/html/live-help-card.html
@@ -21,16 +21,16 @@
 
       <!--
         Summer
-        
+
       <div style="margin-top:3em">
         <header><strong>Hours of Operation</strong></header>
         <div layout="row">
           LiveHelp will resume in September.
         </div>
-      </div>     
+      </div>
       <!--
         Fall
-       -->        
+       -->
       <div style="margin-top:3em">
         <header><strong>Live Help Hours of Operation</strong></header>
         <div layout="row">
@@ -57,7 +57,23 @@
         <div layout="row" title="Victoria Day">May 18, 2020</div>
         -->
       </div>
-      
+
+       <!--
+        Spring
+      <div style="margin-top:3em">
+        <header><strong>Live Help Hours of Operation</strong></header>
+        <div layout="row">
+          <div flex>Mon&ndash;Fri</div><div flex="50">10am&ndash;4pm</div>
+        </div>
+      </div>
+      <div style="margin-top:1em">
+        <header><strong>No Service</strong></header>
+        <div layout="row" title="Victoria Day">May 18, 2020</div>
+        <div layout="row" title="Canada Day">July 1, 2020</div>
+        <div layout="row" title="Natal Day">August 3, 2020</div>
+      </div>
+      -->
+
     </md-card-content>
   </md-card>
 
