--- a/CENTRAL_PACKAGE/html/seasonal-notice_en_US.html
+++ b/CENTRAL_PACKAGE/html/seasonal-notice_en_US.html
@@ -15,7 +15,7 @@
 <md-card class="default-card">
   <md-card-content>
     <p>
-      COVID-19 Update: Due to the closure of Novanet member libraries Novanet Express and holds will not be available until further notice.
+      Novanet Express and holds will not be available due to holiday closures from December 14th to January 3rd. Please check with your library for other Document Delivery/Interlibrary Loan alternatives during this time.
     </p>
   </md-card-content>
 </md-card>
