--- a/CENTRAL_PACKAGE/html/live-help-card.html
+++ b/CENTRAL_PACKAGE/html/live-help-card.html
@@ -30,7 +30,7 @@
       </div>
       <!--
         Fall
-       -->
+
       <div style="margin-top:3em">
         <header><strong>Live Help Hours of Operation</strong></header>
         <div layout="row">
@@ -58,6 +58,7 @@
 
        <!--
         Spring
+        -->
       <div style="margin-top:3em">
         <header><strong>Live Help Hours of Operation</strong></header>
         <div layout="row">
@@ -66,12 +67,9 @@
       </div>
       <div style="margin-top:1em">
         <header><strong>No Service</strong></header>
-        <div layout="row" title="Victoria Day">May 18, 2020</div>
-        <div layout="row" title="Canada Day">July 1, 2020</div>
-        <div layout="row" title="Natal Day">August 3, 2020</div>
+        <div layout="row" title="Easter">Apr 2, 2021 &ndash; Apr 5, 2021</div>
+        <div layout="row" title="Victoria Day">May 24, 2021</div>
       </div>
-      -->
-
     </md-card-content>
   </md-card>
 
