add and show the new fall hours

--- a/CENTRAL_PACKAGE/html/live-help-card.html
+++ b/CENTRAL_PACKAGE/html/live-help-card.html
@@ -32,7 +32,7 @@
 
       <!--
         Fall
-
+      -->
       <div style="margin-top:3em">
         <header><strong>Live Help Hours of Operation</strong></header>
         <div layout="row">
@@ -50,12 +50,13 @@
       </div>
       <div style="margin-top:1em">
         <header><strong>No Service</strong></header>
-        <div layout="row" title="Thanksgiving">Oct 12, 2020</div>
-        <div layout="row" title="Remembrance Day">Nov 11, 2020</div>
-        <div layout="row" title="Winter Break">Dec 5, 2020 &ndash; Jan 10, 2021</div>
-        <div layout="row" title="Heritage Day">Feb 15, 2021</div>
-        <div layout="row" title="Easter">Apr 2, 2021 &ndash; Apr 5, 2021</div>
-        <div layout="row" title="Victoria Day">May 24, 2021</div>
+        <div layout="row" title="National Day for Truth and Reconciliation">Sep 30, 2021</div>
+        <div layout="row" title="Thanksgiving">Oct 11, 2021</div>
+        <div layout="row" title="Remembrance Day">Nov 11, 2021</div>
+        <div layout="row" title="Winter Break">Dec 11, 2021 &ndash; Jan 10, 2022</div>
+        <div layout="row" title="Heritage Day">Feb 21, 2022</div>
+        <div layout="row" title="Easter">Apr 15, 2022 &ndash; Apr 18, 2022</div>
+        <div layout="row" title="Victoria Day">May 23, 2022</div>
       </div>
 
        <!--
