--- a/CENTRAL_PACKAGE/html/seasonal-notice_en_US.html
+++ b/CENTRAL_PACKAGE/html/seasonal-notice_en_US.html
@@ -12,12 +12,10 @@
     </md-card-content>
 </md-card>
 -->
-<!--
+
 <md-card class="default-card">
   <md-card-content>
     <p>
-      Novanet Express and holds will not be available due to holiday closures from December 14th to January 3rd. Please check with your library for other Document Delivery/Interlibrary Loan alternatives during this time.
-    </p>
+Patron functions may not be available during system maintenence, Jan 21-22.    </p>
   </md-card-content>
 </md-card>
--->
