add notice about downtime during alma migration

--- a/CENTRAL_PACKAGE/html/seasonal-notice_en_US.html
+++ b/CENTRAL_PACKAGE/html/seasonal-notice_en_US.html
@@ -12,12 +12,10 @@
     </md-card-content>
 </md-card>
 -->
-<!--
 <md-card class="default-card">
   <md-card-content>
     <p>
-      Novanet Express and holds will not be available due to holiday closures from December 14th to January 3rd. Please check with your library for other Document Delivery/Interlibrary Loan alternatives during this time.
+      Novanet will be moving to a new library interface on May 17th. Our preparation for this move means you will not be able to place holds after May 8th or renew material after May 10th until we start using our new catalogue. Please contact your library after May 17th for help in accessing our new search interface.
     </p>
   </md-card-content>
 </md-card>
--->
