--- a/01NOVA_NETWORK-CENTRAL_PACKAGE/html/seasonal-alert-bar_fr_FR.html
+++ b/01NOVA_NETWORK-CENTRAL_PACKAGE/html/seasonal-alert-bar_fr_FR.html
@@ -1,3 +1,3 @@
 <!--
-<div style="background-color:red;margin:0;padding:0;color:white;text-align:center"> 	🎄 The message goes here! 	🎄 </div>
+<div style="background-color:#C30F16;margin:0;padding:0;color:white;text-align:center"> 	🎄 The message goes here! 	🎄 </div>
 -->
