comment out all institution-specific holiday notices

--- a/01NOVA_ACAD-ACAD/html/institution-alert-bar_fr_FR.html
+++ b/01NOVA_ACAD-ACAD/html/institution-alert-bar_fr_FR.html
@@ -1,2 +1,5 @@
-
-<div style="background-color:#C30F16;margin:0;padding:0;color:white;text-align:center">🎄 Please note that some services, like requests, will be delayed due to holiday closures. 🎄</div>
+<div style="background-color:#C30F16;margin:0;padding:0;color:white;text-align:center">
+  <!--
+  Veuillez noter que certains services, comme les demandes, seront retardés en raison de fermetures pendant le temps de fêtes.
+  -->
+</div>
