--- a/01NOVA_CBU-CBU/html/institution-alert-bar_fr_FR.html
+++ b/01NOVA_CBU-CBU/html/institution-alert-bar_fr_FR.html
@@ -1,2 +1,5 @@
-
-<div style="background-color:#C30F16;margin:0;padding:0;color:white;text-align:center">🎄  Please note there will be a delay in processing hold requests placed during the holiday closure, Dec. 23 - Jan. 2. 🎄</div>
+<div style="background-color:#C30F16;margin:0;padding:0;color:white;text-align:center">
+  <!--
+  Veuillez noter que certains services, comme les demandes, seront retardés en raison de fermetures pendant le temps de fêtes.
+  -->
+</div>
