--- a/01NOVA_NSCAD-NSCAD/html/institution-alert-bar_fr_FR.html
+++ b/01NOVA_NSCAD-NSCAD/html/institution-alert-bar_fr_FR.html
@@ -1,2 +1,5 @@
-
-<div style="background-color:#C30F16;margin:0;padding:0;color:white;text-align:center">🎄 The NSCAD Library is closed Dec. 21, 2022 - Jan. 2, 2023. Services resume Jan. 3, 2023. 🎄</div>
+<div style="background-color:#C30F16;margin:0;padding:0;color:white;text-align:center">
+  <!--
+  Veuillez noter que certains services, comme les demandes, seront retardés en raison de fermetures pendant le temps de fêtes.
+  -->
+</div>
