--- a/01NOVA_MTA-MTA/html/institution-alert-bar_fr_FR.html
+++ b/01NOVA_MTA-MTA/html/institution-alert-bar_fr_FR.html
@@ -1,2 +1,5 @@
-
-<div style="background-color:#C30F16;margin:0;padding:0;color:white;text-align:center">🎄 Mount Allison Libraries are closed Dec. 23 - Jan. 2. Requests placed during the holiday break will be processed when we reopen. 🎄</div>
+<div style="background-color:#C30F16;margin:0;padding:0;color:white;text-align:center">
+  <!--
+  Veuillez noter que certains services, comme les demandes, seront retardés en raison de fermetures pendant le temps de fêtes.
+  -->
+</div>
