--- a/01NOVA_NSCC-NSCC/html/institution-alert-bar_en_US.html
+++ b/01NOVA_NSCC-NSCC/html/institution-alert-bar_en_US.html
@@ -1,2 +1,5 @@
-
-<div style="background-color:#C30F16;margin:0;padding:0;color:white;text-align:center">🎄 Requests are unavailable from December 18/22 - January 2/23. Services will resume January 3, 2023. 🎄</div>
+<div style="background-color:#C30F16;margin:0;padding:0;color:white;text-align:center">
+  <!--
+  Please note that some services, like requests, will be delayed due to holiday closures.
+  -->
+</div>
