--- a/01NOVA_STFX-STFX/html/institution-alert-bar_fr_FR.html
+++ b/01NOVA_STFX-STFX/html/institution-alert-bar_fr_FR.html
@@ -1,2 +1,5 @@
-
-<div style="background-color:#C30F16;margin:0;padding:0;color:white;text-align:center">🎄 Please note that some services, including requests, will be delayed due to holiday closures and will be processed in sequence upon reopening. 🎄</div>
+<div style="background-color:#C30F16;margin:0;padding:0;color:white;text-align:center">
+  <!--
+  Veuillez noter que certains services, comme les demandes, seront retardés en raison de fermetures pendant le temps de fêtes.
+  -->
+</div>
