--- a/01NOVA_MSVU-MSVU/html/institution-alert-bar_en_US.html
+++ b/01NOVA_MSVU-MSVU/html/institution-alert-bar_en_US.html
@@ -1,2 +1,5 @@
-
-<div style="background-color:#C30F16;margin:0;padding:0;color:white;text-align:center">🎄 The MSVU Library is closed Dec. 23 - Jan. 2. Any holds/requests placed during our holiday closure will be processed beginning Jan. 3, 2022. 🎄</div>
+<div style="background-color:#C30F16;margin:0;padding:0;color:white;text-align:center">
+  <!--
+  Please note that some services, like requests, will be delayed due to holiday closures.
+  -->
+</div>
