--- a/01NOVA_DAL-DAL/html/report-a-problem_fr_FR.html
+++ b/01NOVA_DAL-DAL/html/report-a-problem_fr_FR.html
@@ -1,7 +1,8 @@
 <div class="bar report-a-problem-bar margin-top-medium layout-align-center-center layout-row">
   <span class="margin-right-small"/>
-  <md-button class="md-primary" href="https://libraries.dal.ca/help/eresource-access-help-form.html">
+  <md-button class="md-primary" target="_blank" href="https://libraries.dal.ca/help/eresource-access-help-form.html">
     <prm-icon icon-type="svg" svg-icon-set="action" icon-definition="ic_report_problem_24px"></prm-icon>
     <span>Report A Problem!</span>
+    <prm-icon svg-icon-set="primo-ui" icon-definition="open-in-new" layout-margin external-link></prm-icon>
   </md-button>
 </div>
