add sample temp message to TEST view

--- a/01NOVA_MSVU-TEST/html/institution-alert-bar_en_US.html
+++ b/01NOVA_MSVU-TEST/html/institution-alert-bar_en_US.html
@@ -2,4 +2,5 @@
   <!--
   Please note that some services, like requests, will be delayed due to holiday closures.
   -->
+  Any temporary message
 </div>
