add temp notice to USA view

--- a/01NOVA_NETWORK-CENTRAL_PACKAGE/html/homepage/homepage_fr.html
+++ b/01NOVA_NETWORK-CENTRAL_PACKAGE/html/homepage/homepage_fr.html
@@ -1,5 +1,6 @@
 <md-content layout-xs="column" layout="row">
   <div flex="60" layout="column">
+    <institution-notice-card></institution-notice-card>
     <seasonal-notice-card></seasonal-notice-card>
   </div>
   <div flex-xs flex="40" layout="column">
