--- a/01NOVA_USA-USA/html/institution-alert-bar_fr_FR.html
+++ b/01NOVA_USA-USA/html/institution-alert-bar_fr_FR.html
@@ -1,5 +1,8 @@
+<!-- holiday 
 <div style="background-color:#C30F16;margin:0;padding:0;color:white;text-align:center">
-  <!--
   Veuillez noter que certains services, comme les demandes, seront retardés en raison de fermetures pendant le temps de fêtes.
-  -->
+</div>
+-->
+<div style="background-color: #f7eda3; color: #000; border: 1px solid #ede49e; margin: 0; padding: 0; text-align: center;">
+  Veuillez noter que certains services, comme les demandes, seront présentement temporairement retardés.
 </div>
