update the TEST view for staff to preview some temp messages

--- a/01NOVA_MSVU-TEST/html/institution-alert-bar_en_US.html
+++ b/01NOVA_MSVU-TEST/html/institution-alert-bar_en_US.html
@@ -2,5 +2,7 @@
   <!--
   Please note that some services, like requests, will be delayed due to holiday closures.
   -->
-  Any temporary message
+  <!-- Any temporary message -->  
+  🎄  Please note that some services, like requests, will be delayed due to holiday closures.	 🎄
+  
 </div>
