--- a/01NOVA_MSVU-TEST/html/institution-alert-bar_fr_FR.html
+++ b/01NOVA_MSVU-TEST/html/institution-alert-bar_fr_FR.html
@@ -2,5 +2,7 @@
   <!--
   Veuillez noter que certains services, comme les demandes, seront retardés en raison de fermetures pendant le temps de fêtes.
   -->
-  Any temporary message
+  <!-- Any temporary message -->
+  🎄  Veuillez noter que certains services, comme les demandes, seront retardés en raison de fermetures pendant le temps de fêtes. 	🎄
+  
 </div>
