--- a/01NOVA_MSVU-TEST/html/institution-notice_en_US.html
+++ b/01NOVA_MSVU-TEST/html/institution-notice_en_US.html
@@ -12,15 +12,22 @@
     </md-card-content>
 </md-card>
 -->
-<!--
+
 <md-card class="default-card">
+  <md-card-title>
+    <md-card-title-text>
+        <span class="md-headline">A Header?</span>
+    </md-card-title-text>
+  </md-card-title>
   <md-card-content>
     <p>
-      Novanet Express and holds will not be available due to holiday closures from December 14th to January 3rd. Please check with your library for other Document Delivery/Interlibrary Loan alternatives during this time.
+      Please note that some services, like requests, will be delayed due to holiday closures.	
+      <!-- Novanet Express and holds will not be available due to holiday closures from December 14th to January 3rd. Please check with your library for other Document Delivery/Interlibrary Loan alternatives during this time. -->
     </p>
   </md-card-content>
 </md-card>
--->
+
+<!--
 <md-card class="default-card">
   <md-card-content>
     <p>
@@ -28,3 +35,4 @@
     </p>
   </md-card-content>
 </md-card>
+-->
