--- a/01NOVA_MSVU-TEST/html/institution-notice_fr_FR.html
+++ b/01NOVA_MSVU-TEST/html/institution-notice_fr_FR.html
@@ -12,15 +12,22 @@
     </md-card-content>
 </md-card>
 -->
-<!--
+
 <md-card class="default-card">
+  <md-card-title>
+    <md-card-title-text>
+        <span class="md-headline">A Header?</span>
+    </md-card-title-text>
+  </md-card-title>
   <md-card-content>
     <p>
-      Le service Novanet Express et les réservations ne seront pas disponibles en raison de la fermeture des bibliothèques pendant les fêtes de décembre. Nous prévoyons cette interruption pour le 14 décembre jusqu'au 3 janvier. Veuillez contacter votre bibliothèque pour des renseignements sur les autres services de prêt entrebibliothèques pendant cette période.
+      Veuillez noter que certains services, comme les demandes, seront retardés en raison de fermetures pendant le temps de fêtes.
+      <!-- Le service Novanet Express et les réservations ne seront pas disponibles en raison de la fermeture des bibliothèques pendant les fêtes de décembre. Nous prévoyons cette interruption pour le 14 décembre jusqu'au 3 janvier. Veuillez contacter votre bibliothèque pour des renseignements sur les autres services de prêt entrebibliothèques pendant cette période. -->
     </p>
   </md-card-content>
 </md-card>
--->
+
+<!--
 <md-card class="default-card">
   <md-card-content>
     <p>
@@ -28,3 +35,4 @@
     </p>
   </md-card-content>
 </md-card>
+-->
